--- a/application/templates/partials/navbar.mustache
+++ b/application/templates/partials/navbar.mustache
@@ -14,7 +14,13 @@
 		     
 		    <!-- Everything you want hidden at 940px or less, place within here -->
 		    <div class="nav-collapse collapse">
-		    <!-- .nav, .navbar-search, .navbar-form, etc -->
+		    	<ul class="nav">
+					{{#navigation}}
+					<li class="">
+						<a href="{{Path}}">{{Title}}</a>
+					</li>
+					{{/navigation}}
+	            </ul>
 		    </div>
 	     
 	    </div>
