Updated some settings and Twitter Bootstrap to 3.0.2 from 2.2

--- a/application/templates/home/about.mustache
+++ b/application/templates/home/about.mustache
@@ -1,4 +1,6 @@
-<h1>About this Skeleton</h1>
+<div class="page-header">
+  <h1>About this Skeleton</h1>
+</header>
 
 <p>
 	It's only to make me create projects a lot faster!<br/>
