--- a/application/templates/home/about.mustache
+++ b/application/templates/home/about.mustache
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h1>About this Skeleton</h1>
-</header>
+</div>
 
 <p>
 	It's only to make me create projects a lot faster!<br/>
